docs(card): fix card example on ie11
- Prevent broken overflow text from occurring

See #504

--- a/docs/scss/_examples.scss
+++ b/docs/scss/_examples.scss
@@ -23,10 +23,6 @@
   height: 150px;
 }
 
-.docs_align-flex-start {
-  align-items: flex-start;
-}
-
 .docs_selcounter-label {
   display: inline-block;
   font-weight: 700;
